fix paragraph spacing in speaker bios

--- a/sass/_speaker.scss
+++ b/sass/_speaker.scss
@@ -133,6 +133,10 @@
     }
 
     .bio {
+      p + p {
+        margin-top: 40px;
+      }
+
       a {
         color: #00ffc4;
         text-decoration: underline;
